Charts page removed to prevent crashing on mobile version.

--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -34,5 +34,9 @@ color: whitesmoke !important;
     .card {
         margin: 2% 0 !important;
     }
+
+    .container {
+        margin: 1rem;
+        }
     
 }
