--- a/client/src/components/Chart/Chart.module.css
+++ b/client/src/components/Chart/Chart.module.css
@@ -1,10 +1,11 @@
 .container {
     display: block;
     justify-content: center;
-    width: 90%;
-    margin: auto 5px;
+    width: 75%;
+    margin: 2rem 5px;
     background-color: rgba(0, 0, 0, 0.75);
     font-size: 1rem;
+    padding-bottom: 1rem;
 }
 
 
