--- a/client/src/components/CountryPicker/CountryPicker.module.css
+++ b/client/src/components/CountryPicker/CountryPicker.module.css
@@ -1,5 +1,5 @@
 .formControl {
-    width: 80%;   
+    width: 60%;   
     margin-bottom: 4rem !important;
     padding: 10px !important;
     background-color: #262626 !important;
